--- a/backend/forum-templates/thread.css
+++ b/backend/forum-templates/thread.css
@@ -1,5 +1,18 @@
+#title {
+    padding-left: 1rem;
+}
+
+#post {
+    padding-left: 1rem;
+}
+
 .comment-form {
     margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.comment {
+    padding: 0.5rem 0 0 1rem;
 }
 
 .comment-heading {
